Nelmio API doc added
